@@ -6,7 +6,7 @@ confdb.setupCount=7
 
 confdb0.dbSetup=HLT Development
 confdb0.dbType=oracle
-confdb0.dbHost=cmsr1-v.cern.ch
+confdb0.dbHost=cmsr1-s.cern.ch
 confdb0.dbPort=10121
 confdb0.dbName=cms_cond.cern.ch
 confdb0.dbUser=cms_hltdev_writer
